--- a/index.htm
+++ b/index.htm
@@ -274,7 +274,7 @@
 <body>
     <header>
         <div class="profile-container">
-            <img src="profile.jpg" alt="Abdighafar Hassan" class="profile-pic">
+            <img src="abdighafar.jpg" alt="Abdighafar Hassan" class="profile-pic">
             <h1>ABDIGHAFAR HASSAN</h1>
             <p class="tagline">Building intelligent systems at the intersection of data science and cybersecurity</p>
         </div>
